# softFloat

./: CMakeLists.txt  README.md  platform.h  platform.h.in  softFloat_DEFS.cmake  softFloat_HDRS.cmake  softFloat_SOURCES.cmake  softFloat_SRCS.cmake  softFloat_version.c  softFloat_version.h  softfloat_DEFS.cmake  softfloat_PROJECT.cmake  softfloat_SPECS.cmake  softfloat_version.c  softfloat_version.h
share/SoftFloat-3e/: COPYING.txt  README.html  README.txt
share/SoftFloat-3e/doc/: SoftFloat-history.html  SoftFloat-source.html
share/SoftFloat-3e/source/: extF80M_div.c  extF80M_le_quiet.c  extF80M_lt.c  extF80M_lt_quiet.c  extF80M_mul.c  extF80M_rem.c  extF80M_sqrt.c  extF80M_to_f128M.c  extF80M_to_f16.c  extF80M_to_f32.c  extF80M_to_f64.c  extF80M_to_i32.c  extF80M_to_i32_r_minMag.c  extF80M_to_i64.c  extF80M_to_i64_r_minMag.c  extF80M_to_ui32.c  extF80M_to_ui32_r_minMag.c  extF80M_to_ui64_r_minMag.c  extF80_eq.c  extF80_eq_signaling.c  extF80_le.c  extF80_le_quiet.c  extF80_mul.c  extF80_roundToInt.c  extF80_sub.c  extF80_to_f128.c  extF80_to_f32.c  extF80_to_i32_r_minMag.c  extF80_to_i64_r_minMag.c  extF80_to_ui32_r_minMag.c  f128M_div.c  f128M_eq.c  f128M_eq_signaling.c  f128M_le.c  f128M_le_quiet.c  f128M_lt.c  f128M_lt_quiet.c  f128M_mul.c  f128M_rem.c  f128M_roundToInt.c  (+136 more)
share/SoftFloat-3e/source/8086/: s_commonNaNToExtF80UI.c  s_commonNaNToF32UI.c  s_commonNaNToF64UI.c  s_f32UIToCommonNaN.c  s_propagateNaNExtF80UI.c  s_propagateNaNF128M.c  s_propagateNaNF128UI.c  s_propagateNaNF32UI.c  s_propagateNaNF64UI.c
share/SoftFloat-3e/source/8086-SSE/: s_commonNaNToF128M.c  s_commonNaNToF128UI.c  s_extF80UIToCommonNaN.c  s_f16UIToCommonNaN.c  s_f64UIToCommonNaN.c  s_propagateNaNF128UI.c  s_propagateNaNF32UI.c  specialize.h
share/SoftFloat-3e/source/ARM-VFPv2/: s_commonNaNToExtF80UI.c  s_commonNaNToF128M.c  s_commonNaNToF128UI.c  s_commonNaNToF16UI.c  s_commonNaNToF64UI.c  s_f128MToCommonNaN.c  s_f128UIToCommonNaN.c  s_f16UIToCommonNaN.c  s_f32UIToCommonNaN.c  s_propagateNaNExtF80M.c  s_propagateNaNExtF80UI.c  s_propagateNaNF32UI.c  specialize.h
share/SoftFloat-3e/source/ARM-VFPv2-defaultNaN/: s_commonNaNToExtF80UI.c  s_commonNaNToF128UI.c  s_propagateNaNExtF80M.c  s_propagateNaNF16UI.c  s_propagateNaNF64UI.c  specialize.h
share/SoftFloat-3e/source/include/: internals.h  primitiveTypes.h  primitives.h  softfloat.h  softfloat_types.h
share/doc/: softFloat-source.html  softFloat.html
src/: extF80M_add.c  extF80M_eq.c  extF80M_eq_signaling.c  extF80M_le.c  extF80M_le_quiet.c  extF80M_lt_quiet.c  extF80M_mul.c  extF80M_rem.c  extF80M_roundToInt.c  extF80M_sqrt.c  extF80M_sub.c  extF80M_to_f16.c  extF80M_to_f32.c  extF80M_to_i32_r_minMag.c  extF80M_to_i64_r_minMag.c  extF80M_to_ui32_r_minMag.c  extF80M_to_ui64.c  extF80M_to_ui64_r_minMag.c  extF80_add.c  extF80_div.c  extF80_isSignalingNaN.c  extF80_lt.c  extF80_lt_quiet.c  extF80_rem.c  extF80_roundToInt.c  extF80_sqrt.c  extF80_to_f16.c  extF80_to_f64.c  extF80_to_i32.c  extF80_to_i64.c  extF80_to_ui32.c  extF80_to_ui64.c  extF80_to_ui64_r_minMag.c  f128M_add.c  f128M_div.c  f128M_eq.c  f128M_lt_quiet.c  f128M_mul.c  f128M_mulAdd.c  f128M_roundToInt.c  (+153 more)
src/8086/: s_commonNaNToExtF80M.c  s_commonNaNToF16UI.c  s_f128UIToCommonNaN.c  s_propagateNaNF16UI.c  softfloat_raiseFlags.c  specialize.h
src/8086-SSE/: f128M_isSignalingNaN.c  s_extF80MToCommonNaN.c  s_f128MToCommonNaN.c  s_propagateNaNExtF80M.c  s_propagateNaNF128M.c  s_propagateNaNF16UI.c  s_propagateNaNF64UI.c
src/ARM-VFPv2/: s_commonNaNToExtF80M.c  s_commonNaNToF32UI.c  s_extF80MToCommonNaN.c  s_extF80UIToCommonNaN.c  s_f64UIToCommonNaN.c  s_propagateNaNF128M.c  s_propagateNaNF128UI.c  s_propagateNaNF16UI.c  s_propagateNaNF64UI.c  softfloat_raiseFlags.c  specialize.h
src/ARM-VFPv2-defaultNaN/: extF80M_isSignalingNaN.c  s_commonNaNToExtF80M.c  s_commonNaNToF128M.c  s_propagateNaNExtF80UI.c  s_propagateNaNF128M.c  s_propagateNaNF128UI.c  s_propagateNaNF32UI.c
src/include/: opts-GCC.h  primitiveTypes.h  primitives.h  softFloat_types.h  softfloat.h
templates/Linux-ARM-VFPv2-GCC/: Makefile
templates/Win64-MinGW-w64/: Makefile
templates/template-not-FAST_INT64/: Makefile
